--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ MarkupSafe==2.0.1
 Pillow==8.3.2
 pipenv==2021.5.29
 platformdirs==2.4.0
-postgres.client==0.4.6
+pgcli==3.5.0
 psycopg2==2.9.1
 psycopg2-binary==2.9.1
 pytz==2021.1
